test/Fail/Issue2880.err
Issue2880.agda:8.1-51: error: [PragmaCompiled]
COMPILE pragma not allowed in safe mode.

Issue2880.agda:15.3-31: error: [PragmaCompiled]
COMPILE pragma not allowed in safe mode.

Issue2880.agda:20.3-31: error: [PragmaCompiled]
COMPILE pragma not allowed in safe mode.
